# Projekt_CPP_1

./: .clang-format  .clang-tidy  .gitignore  logs.cpp  logs.hpp  mainwindow.hpp  meson.build  meson.options  native.ini  release.ini
logs/: credits.txt
resources/: meson.build  resources.qrc
src/: collection.hpp  icons.hpp  library.cpp  library.hpp  logs.cpp  logs.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  meson.build  middletreemodel.cpp  middletreemodel.hpp  playbackqueue.cpp  playbackqueue.hpp  playercontrols.cpp  playercontrols.hpp  playertreemodel.cpp  playertreemodel.hpp  settings.cpp  settings.hpp  settingsdialog.cpp  settingsdialog.hpp  sidebar.cpp  sidebar.h  track.cpp  track.hpp  treeitem.cpp  treeitem.hpp  treemodel.cpp  treemodel.hpp
subprojects/: qlementine-icons.wrap  qlementine.wrap  utf8cpp.wrap
